--- a/nrf52_bluefruit_en.html
+++ b/nrf52_bluefruit_en.html
@@ -83,7 +83,7 @@
                           <li><a href="http://www.afantor.cc/nRF52_bluefruit.html#portfolio">MAKES</a></li>
                           <li><a href="./">MicroPython</a></li>
                           <li><a href="./">Privacy</a></li>   
-                          <li><a href="./nRF52_bluefruit.html"> <img src="./img/icons/China.png"></a></li>
+                          <li><a href="./nrf52_bluefruit.html"> <img src="./img/icons/China.png"></a></li>
                     <!-- /        <li class="current"><a href="index.html">Home</a></li>                       
                     <!-- /        <li><a href="#about">About</a></li>
                     <!-- /        <li><a href="#pricing">Pricing</a></li>  -->
