--- a/nrf52_bluefruit.html
+++ b/nrf52_bluefruit.html
@@ -113,7 +113,7 @@
 
                 <div class="carousel-inner">
 
-                    <div class="item active" style="background-image: url(&quot;img/nrf52/blue1.jpg&quot;); height: 400px;">
+                    <div class="item active" style="background-image: url(&quot;img/nrf52/blue1.png&quot;); height: 400px;">
                         <div class="carousel-caption">
                             <div class="animated bounceInDown">
                                 <h1>nRF52832 Bluefruit52 Board</h1>
@@ -128,7 +128,7 @@
                         </div>
                     </div>              
 
-                    <div class="item" style="background-image: url(&quot;img/nrf52/blue2.jpg&quot;); height: 400px;">                
+                    <div class="item" style="background-image: url(&quot;img/nrf52/blue2.png&quot;); height: 400px;">                
                         <div class="carousel-caption">
                             <div class="animated bounceInRight">
                                 <h1>nRF52832 Bluefruit52 Board</h1>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
 
-                    <div class="item" style="background-image: url(&quot;img/nrf52/blue3.jpg&quot;); height: 400px;">                 
+                    <div class="item" style="background-image: url(&quot;img/nrf52/blue3.png&quot;); height: 400px;">                 
                          <div class="carousel-caption">
                             <div class="animated bounceInUp">
                                 <h1>nRF52832 Bluefruit52 Board</h1>
@@ -226,7 +226,7 @@
                     <div class="col-md-12 col-sm-12 wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;">
                         <div class="media">
                             <a href="./nRF52_bluefruit.html#" class="pull-left">
-                                <img src="./img/nrf52/blue6.jpg" class="media-object" alt="description">
+                                <img src="./img/nrf52/blue6.png" class="media-object" alt="description">
                             </a>
                             <div class="media-body">
                                 <h3>描述</h3>
